Fixed wrapping of 'read more'

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -265,6 +265,7 @@ article header h1 a {
     font-size: 0.75em;
     color: grey;
     margin-top: 0.25em;
+	text-align: left;
 }
 
 .post .article-info {
@@ -354,9 +355,11 @@ article p:not(:empty) + .diptych {
 }
 
 .read-more {
-	margin-top: 0;
+	margin-top: auto;
 	margin-bottom: 0;
+	margin-left: auto;
     text-align: right;
+	white-space: nowrap;
 }
 
 .post-list-footer {
